# RubicsCubeSolver

./: CMakeLists.txt  GenericCube.cpp  GenericCube.h  RubiksCube.cpp  RubiksCube1DArray.cpp  RubiksCube3DArray.cpp  main.cpp
Model/PatternDatabase/: PatternDatabase.h
Models/: RubiksCube3DArray.cpp  RubiksCubeBitboard.cpp
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
